<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg0_cmprss"
        android:id="@+id/formBack"
        android:contentDescription="@string/fondo_de_layout" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/trans_white_rectangle">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="130dp"
                android:orientation="vertical"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center"
                android:background="@drawable/trans_whte_rectangle2">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="30dp"
                    android:alpha="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/sgcp_logo"
                    android:contentDescription="@string/logotipo" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inicio_de_sesi_n"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAlignment="center"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_desc"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginBottom="30dp"
                android:textAlignment="center"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"/>

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/usuario"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/ic_user"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:id="@+id/txtUsuario"
                android:layout_marginBottom="10dp"/>

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Contraseña..."
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_pass"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:id="@+id/txtPass"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"/>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/iniciar"
                android:id="@+id/btnIniciar"
                android:textStyle="normal"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                app:bootstrapBrand="danger"
                android:textSize="18sp"
                app:roundedCorners="true"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>